# plymouth-semaphore

./: .gitignore  CMakeLists.txt  DEMO.md  README.md  generate.sh
.github/workflows/: ci.yml
data/: livekit.plymouth  semaphore.plymouth
